--- a/Sharp.Xmpp.csproj
+++ b/Sharp.Xmpp.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Extensions\XEP-0279\ServerIpCheck.cs" />
     <Compile Include="Extensions\XEP-0280\MessageCarbons.cs" />
     <Compile Include="Im\SubscriptionRequest.cs" />
+    <Compile Include="Im\UserSearchResult.cs" />
     <Compile Include="XmppDisconnectionException.cs" />
     <Compile Include="XmppExceptions.cs" />
     <Compile Include="ErrorCondition.cs" />
