--- a/Sharp.Xmpp.csproj
+++ b/Sharp.Xmpp.csproj
@@ -16,11 +16,11 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <OutputPath>..\Repositorio3\bin\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;WINDOWSPLATFORM</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Sharp.Xmpp.xml</DocumentationFile>
+    <WarningLevel>0</WarningLevel>
+    <DocumentationFile>C:\Desenvolvimento\Repositorio3\bin\Sharp.Xmpp.xml</DocumentationFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -180,6 +180,10 @@
     <Compile Include="Extensions\XEP-0231\BobData.cs" />
     <Compile Include="Extensions\XEP-0279\ServerIpCheck.cs" />
     <Compile Include="Extensions\XEP-0280\MessageCarbons.cs" />
+    <Compile Include="Extensions\XEP-0384\EncryptedMessage.cs" />
+    <Compile Include="Extensions\XEP-0384\OMEMOEncryption.cs" />
+    <Compile Include="Im\EncryptedMessageEventArgs.cs" />
+    <Compile Include="Im\MessageHint.cs" />
     <Compile Include="Im\SubscriptionRequest.cs" />
     <Compile Include="Im\UserSearchResult.cs" />
     <Compile Include="XmppDisconnectionException.cs" />
