--- a/Sharp.Xmpp.csproj
+++ b/Sharp.Xmpp.csproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Chat\lib\Sharp.Xmpp\</OutputPath>
+    <OutputPath>..\Chat2\lib\Sharp.Xmpp\</OutputPath>
     <DefineConstants>TRACE;WINDOWSPLATFORM</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -184,6 +184,8 @@
     <Compile Include="Extensions\XEP-0280\MessageCarbons.cs" />
     <Compile Include="Extensions\XEP-0384\EncryptedMessage.cs" />
     <Compile Include="Extensions\XEP-0384\OMEMOEncryption.cs" />
+    <Compile Include="Core\ConnectEventArgs.cs" />
+    <Compile Include="Im\ConnectEventArgs.cs" />
     <Compile Include="Im\EncryptedMessageEventArgs.cs" />
     <Compile Include="Im\MessageHint.cs" />
     <Compile Include="Im\SubscriptionRequest.cs" />
