Trazendo mudanças de outro branch
Trazendo mudanças de outro branch

--- a/Net.Xmpp.csproj
+++ b/Net.Xmpp.csproj
@@ -70,9 +70,11 @@
   <ItemGroup>
     <Compile Include="Client\FileTransferSettings.cs" />
     <Compile Include="Client\XmppClient.cs" />
+    <Compile Include="Core\ConnectEventArgs.cs" />
     <Compile Include="Core\ErrorEventArgs.cs" />
     <Compile Include="Extensions\CustomExtension\CustomIqExtension.cs" />
     <Compile Include="Extensions\CustomExtension\CustomIqRequestDelegate.cs" />
+    <Compile Include="Extensions\vCard.cs" />
     <Compile Include="Extensions\XEP-0004\DataForms.cs" />
     <Compile Include="Extensions\XEP-0004\Dataforms\BooleanField.cs" />
     <Compile Include="Extensions\XEP-0004\Dataforms\CancelForm.cs" />
@@ -122,6 +124,8 @@
     <Compile Include="Extensions\XEP-0045\RoomVisibility.cs" />
     <Compile Include="Extensions\XEP-0045\MucStatusType.cs" />
     <Compile Include="Extensions\XEP-0055\JabberSearch.cs" />
+    <Compile Include="Extensions\XEP-0059\XmppPage.cs" />
+    <Compile Include="Extensions\XEP-0059\XmppPageRequest.cs" />
     <Compile Include="Extensions\XEP-0065\IPAddressExtensions.cs" />
     <Compile Include="Extensions\XEP-0065\Socks5Bytestreams.cs" />
     <Compile Include="Extensions\XEP-0065\Socks5\ATyp.cs" />
@@ -148,6 +152,7 @@
     <Compile Include="Extensions\XEP-0065\UPnP\UPnP.cs" />
     <Compile Include="Extensions\XEP-0077\InBandRegistration.cs" />
     <Compile Include="Extensions\XEP-0077\RegistrationCallback.cs" />
+    <Compile Include="Extensions\XEP-0082\DateTimeProfiles.cs" />
     <Compile Include="Extensions\XEP-0084\AvatarChangedEventArgs.cs" />
     <Compile Include="Extensions\XEP-0084\UserAvatar.cs" />
     <Compile Include="Extensions\XEP-0085\ChatState.cs" />
@@ -176,12 +181,20 @@
     <Compile Include="Extensions\XEP-0118\TuneEventArgs.cs" />
     <Compile Include="Extensions\XEP-0118\TuneInformation.cs" />
     <Compile Include="Extensions\XEP-0118\UserTune.cs" />
+    <Compile Include="Extensions\XEP-0136\ArchivedChat.cs" />
+    <Compile Include="Extensions\XEP-0136\ArchivedChatId.cs" />
+    <Compile Include="Extensions\XEP-0136\ArchivedMessage.cs" />
+    <Compile Include="Extensions\XEP-0136\ArchivedMessageType.cs" />
+    <Compile Include="Extensions\XEP-0136\MessageArchiving.cs" />
     <Compile Include="Extensions\XEP-0153\vCardAvatars.cs" />
     <Compile Include="Extensions\XEP-0163\Pep.cs" />
+    <Compile Include="Extensions\XEP-0203\DelayedDelivery.cs" />
     <Compile Include="Extensions\XEP-0231\BitsOfBinary.cs" />
     <Compile Include="Extensions\XEP-0231\BobData.cs" />
     <Compile Include="Extensions\XEP-0279\ServerIpCheck.cs" />
     <Compile Include="Extensions\XEP-0280\MessageCarbons.cs" />
+    <Compile Include="Extensions\XEP-0313\MessageArchiveManagement.cs" />
+    <Compile Include="Im\ConnectEventArgs.cs" />
     <Compile Include="Im\SubscriptionRequest.cs" />
     <Compile Include="XmppDisconnectionException.cs" />
     <Compile Include="XmppExceptions.cs" />
