--- a/Net.Xmpp.csproj
+++ b/Net.Xmpp.csproj
@@ -194,6 +194,8 @@
     <Compile Include="Extensions\XEP-0279\ServerIpCheck.cs" />
     <Compile Include="Extensions\XEP-0280\MessageCarbons.cs" />
     <Compile Include="Extensions\XEP-0313\MessageArchiveManagement.cs" />
+    <Compile Include="Extensions\XEP-0363\Slot.cs" />
+    <Compile Include="Extensions\XEP-0363\SlotRequest.cs" />
     <Compile Include="Im\ConnectEventArgs.cs" />
     <Compile Include="Im\SubscriptionRequest.cs" />
     <Compile Include="XmppDisconnectionException.cs" />
@@ -268,7 +270,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="License.md" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Readme.md" />
     <None Include="ReleaseNotes.md" />
     <None Include="UPNPLib" />
