--- a/Net.Xmpp.csproj
+++ b/Net.Xmpp.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Extensions\XEP-0279\ServerIpCheck.cs" />
     <Compile Include="Extensions\XEP-0280\MessageCarbons.cs" />
     <Compile Include="Extensions\XEP-0313\MessageArchiveManagement.cs" />
+    <Compile Include="Extensions\XEP-0363\HTTPFileUpload.cs" />
     <Compile Include="Extensions\XEP-0363\Slot.cs" />
     <Compile Include="Extensions\XEP-0363\SlotRequest.cs" />
     <Compile Include="Im\ConnectEventArgs.cs" />
