--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Project Health
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -22,6 +22,10 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
+    # Setup MSBuild
     - name: setup-msbuild
       uses: microsoft/setup-msbuild@v1
+      
+    # Build project
+    - name: Build-project
+      run: msbuild Net.Xmpp.sln /p:Configuration=Release;TrackFileAccess=false /t:Rebuild
