Enabled NRT. Nullable events, fixed possible null dereference warnings with pattern matching.

--- a/Net.Xmpp.csproj
+++ b/Net.Xmpp.csproj
@@ -4,6 +4,7 @@
     <AssemblyName>Net.Xmpp</AssemblyName>
     <TargetFramework>net45</TargetFramework>
     <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Client\Examples.xml">
